--- a/src/assets/scss/mixin.scss
+++ b/src/assets/scss/mixin.scss
@@ -15,7 +15,7 @@
 $cl1:#1096b9; // 主要色调一
 $cl2:#969696;//灰色字体
 $cl3:#e21c1d;//红色字体
-$cl4:#999;//灰色字体 提醒性文字颜色
+$cl4:#666;//灰色字体 提醒性文字颜色
 
 $body-bg:#fff;
 
@@ -32,21 +32,10 @@ $back-h:80;//顶部 返回高度
 $back-bg:#1096b9; //背景颜色 1096b9
 $back-cl:#fff; //文字颜色
 
-$btn-bg1:#1bb5db;//按钮主色调1
+$btn-bg1:#1096b9;//按钮主色调1
 $btn-bg2:#fc4863;//按钮主色调2
 $btn-cl1:#fff;//按钮主色调1
 $btn-cl2:#fff;//按钮主色调2
-
-
-
-$f22:22px;
-$f20:20px;
-$f18:18px;
-$f16:16px;
-$f14:14px;
-$f13:13px;
-$f12:12px;
-
 
 
 
