--- a/src/assets/scss/mixin.scss
+++ b/src/assets/scss/mixin.scss
@@ -28,10 +28,13 @@ $footer-h:112;
 $footer-bg:#fff;
 
 
+
+
 $back-h:80;//顶部 返回高度
 $back-bg:#1096b9; //背景颜色 1096b9
 $back-cl:#fff; //文字颜色
 
+$btn-dis:#ddd;//按钮警用色
 $btn-bg1:#1096b9;//按钮主色调1
 $btn-bg2:#fc4863;//按钮主色调2
 $btn-cl1:#fff;//按钮主色调1
